fixed footer addres portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
             <div class="contact-menu">
                 <a class="footer-logo" href="./index.html"><img src="./images/main/logo_invert.svg" alt=""></a>
                 <ul class="footer-contact">
-                    <li class="item"><a>г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="item"><a class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="item">
                         <a href="mailto:info@devstudio.com" class="footer-color">info@devstudio.com</a>
                     </li>
