correct sizes according to site layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,10 +54,10 @@
                 </ul>
             </form>
             <ul class="filter-item">
-                <li class="item">
-                    <a class="filter-link">
-                        <img class="project-logo" src="./images/portfolio/work1.png" alt="Технокряк">
-                        <div>
+                <li class="item card">
+                    <a>
+                        <img class="project-logo" src="./images/portfolio/work1.png" alt="Технокряк" width="370">
+                        <div class="card-content">
                             <h2 class="project">Технокряк</h2>
                             <p class="work">Веб-сайт</p>
                         </div>
@@ -66,9 +66,9 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work2.png" width="380" alt=" Постер">
-                        <div>
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work2.png" width="370" alt=" Постер">
+                        <div class="card-content">
                             <h2 class="project">Постер New Orlean vs Golden Stars</h2>
                             <p class="work">Дизайн</p>
                         </div>
@@ -77,9 +77,9 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work3.png" width="380" alt=" Seafood">
-                        <div>
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work3.png" width="370" alt=" Seafood">
+                        <div class="card-content">
                             <h2 class="project">Ресторан Seafood</h2>
                             <p class="work">Приложение</p>
                         </div>
@@ -88,9 +88,9 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work4.png" width="380" alt=" Prime">
-                        <div>
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work4.png" width="370" alt=" Prime">
+                        <div class="card-content">
                             <h2 class="project">Проект Prime</h2>
                             <p class="work">Маркетинг</p>
                         </div>
@@ -99,9 +99,9 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work5.png" width="380" alt=" Boxes">
-                        <div>
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work5.png" width="370" alt=" Boxes">
+                        <div class="card-content">
                             <h2 class="project">Проект Boxes</h2>
                             <p class="work">Приложение</p>
                         </div>
@@ -110,10 +110,10 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work6.png" width="380"
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work6.png" width="370"
                             alt=" Inspiration has no Borders">
-                        <div>
+                        <div class="card-content">
                             <h2 class="project">Inspiration has no Borders</h2>
                             <p class="work">Веб-сайт</p>
                         </div>
@@ -122,9 +122,9 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work7.png" width="380" alt=" Limited Edition">
-                        <div>
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work7.png" width="370" alt=" Limited Edition">
+                        <div class="card-content">
                             <h2 class="project">Издание Limited Edition</h2>
                             <p class="work">Дизайнт</p>
                         </div>
@@ -133,9 +133,9 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work8.png" width="380" alt=" LAB">
-                        <div>
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work8.png" width="370" alt=" LAB">
+                        <div class="card-content">
                             <h2 class="project">Проект LAB</h2>
                             <p class="work">Маркетинг</p>
                         </div>
@@ -144,10 +144,10 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item"><a>
-                        <img class="project-logo" src="./images/portfolio/work9.png" width="380"
+                <li class="item card"><a>
+                        <img class="project-logo" src="./images/portfolio/work9.png" width="370"
                             alt=" Growing Business">
-                        <div>
+                        <div class="card-content">
                             <h2 class="project">Growing Business</h2>
                             <p class="work">Приложение</p>
                         </div>
