add borders to card Portfolio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header container">
         <nav class="header__nav">
-            <a class="logo" href="./index.html"><img src="./images/main/logo.svg" alt=""></a>
+            <a class="header__logo" href="./index.html"><img src="./images/main/logo.svg" alt=""></a>
             <ul class="site-nav">
                 <li class="item"><a href="#">Студия</a></li>
                 <li class="item"><a href="./portfolio.html">Портфолио</a></li>
