--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header container">
         <nav class="header__nav">
-            <a class="logo" href="./index.html"><img src="./images/main/logo.svg" alt=""></a>
+            <a class="header__logo" href="./index.html"><img src="./images/main/logo.svg" alt=""></a>
             <ul class="site-nav">
                 <li class="item"><a href="#">Студия</a></li>
                 <li class="item"><a href="./portfolio.html">Портфолио</a></li>
@@ -37,24 +37,24 @@
                 <h1>Портфолио</h1>
                 <ul>
                     <li class="button portfolio">
-                        <button>Все</button>
+                        <button class="filter__elem">Все</button>
                     </li>
                     <li class="button portfolio">
-                        <button>Веб-сайты</button>
+                        <button class="filter__elem">Веб-сайты</button>
                     </li>
                     <li class="button portfolio">
-                        <button>Приложения</button>
+                        <button class="filter__elem">Приложения</button>
                     </li>
                     <li class="button portfolio">
-                        <button>Дизайн</button>
+                        <button class="filter__elem">Дизайн</button>
                     </li>
                     <li class="button portfolio">
-                        <button>Маркетинг</button>
+                        <button class="filter__elem">Маркетинг</button>
                     </li>
                 </ul>
             </form>
             <ul class="filter-item">
-                <li class="item card">
+                <li class="item ">
                     <a>
                         <img class="project-logo" src="./images/portfolio/work1.png" alt="Технокряк" width="370">
                         <div class="card-content">
@@ -66,10 +66,10 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work2.png" width="370" alt=" Постер">
                         <div class="card-content">
-                            <h2 class="project">Постер New Orlean vs Golden Stars</h2>
+                            <h2 class="project">Постер New Orlean vs Golden Star</h2>
                             <p class="work">Дизайн</p>
                         </div>
                         <p class="project-descr">Технокряк это современная площадка распространения коронавируса.
@@ -77,7 +77,7 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work3.png" width="370" alt=" Seafood">
                         <div class="card-content">
                             <h2 class="project">Ресторан Seafood</h2>
@@ -88,7 +88,7 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work4.png" width="370" alt=" Prime">
                         <div class="card-content">
                             <h2 class="project">Проект Prime</h2>
@@ -99,7 +99,7 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work5.png" width="370" alt=" Boxes">
                         <div class="card-content">
                             <h2 class="project">Проект Boxes</h2>
@@ -110,7 +110,7 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work6.png" width="370"
                             alt=" Inspiration has no Borders">
                         <div class="card-content">
@@ -122,7 +122,7 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work7.png" width="370" alt=" Limited Edition">
                         <div class="card-content">
                             <h2 class="project">Издание Limited Edition</h2>
@@ -133,7 +133,7 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work8.png" width="370" alt=" LAB">
                         <div class="card-content">
                             <h2 class="project">Проект LAB</h2>
@@ -144,7 +144,7 @@
                             платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                     </a>
                 </li>
-                <li class="item card"><a>
+                <li class="item"><a>
                         <img class="project-logo" src="./images/portfolio/work9.png" width="370"
                             alt=" Growing Business">
                         <div class="card-content">
